# slam

./: CMakeLists.txt  conanfile.txt  pgSlam.py
ceres_examples/pose_graph_2d/: CMakeLists.txt  pose_graph_2d.cc
ceres_examples/pose_graph_3d/: CMakeLists.txt
dataset/: input_M3500_g2o_ceres.g2o  input_M3500_g2o_gtsam.g2o
examples/: CMakeLists.txt
gtsam_examples/: CMakeLists.txt  Pose2SLAMExample_g2o.cpp  Pose3SLAMExample_g2o.cpp
